--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -5,4 +5,8 @@
 @import "global/base";
 @import "global/typography";
 @import "global/layouts";
+@import "components/siteheader";
 @import "components/btn";
+@import "components/menu";
+@import "components/hero";
+
