--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -6,6 +6,7 @@
 @import "global/typography";
 @import "global/layouts";
 @import "components/siteheader";
+@import "components/sitefooter";
 @import "components/btn";
 @import "components/menu";
 @import "components/hero";
