--- a/src/stylesheets/global/_variables.scss
+++ b/src/stylesheets/global/_variables.scss
@@ -1,6 +1,6 @@
 $c-primary: #fd9270;
-$body-font-family: 'Raleway', sans-serif;
-$header-font-family: 'Fahkwang', sans-serif;
+$body-font-family: "Raleway", sans-serif;
+$header-font-family: "Fahkwang", sans-serif;
 $body-font-color: #3b3b3b;
 $body-background: #ededed;
 $global-weight-bold: 700;
