--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Fahkwang:400,400i,700|Raleway:400,400i,700');
+@import url("https://fonts.googleapis.com/css?family=Fahkwang:400,400i,700|Raleway:400,400i,700");
 @import "~reset-css"; // Load CSS Reset from NPM
 @import "global/variables";
 @import "global/mixins";
@@ -10,4 +10,3 @@
 @import "components/btn";
 @import "components/menu";
 @import "components/hero";
-
