--- a/src/stylesheets/global/_variables.scss
+++ b/src/stylesheets/global/_variables.scss
@@ -1,4 +1,4 @@
-$c-primary: #fd9270;
+$c-primary: #ff69b4;
 $body-font-family: "Raleway", sans-serif;
 $header-font-family: "Fahkwang", sans-serif;
 $body-font-color: #3b3b3b;
