--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -11,3 +11,6 @@
 @import "components/menu";
 @import "components/hero";
 @import "components/servicecard";
+@import "components/nicetitle";
+@import "components/bio";
+@import "components/testicard";
