--- a/src/stylesheets/global/_variables.scss
+++ b/src/stylesheets/global/_variables.scss
@@ -1,9 +1,13 @@
 $c-primary: #ff69b4;
+$c-secondary: #0e2241;
+$c-ametist: #675682;
+$white: #ededed;
 $body-font-family: "Raleway", sans-serif;
 $header-font-family: "Fahkwang", sans-serif;
-$body-font-color: #3b3b3b;
+$body-font-color: #001b36;
 $body-background: #ededed;
 $global-weight-bold: 700;
+$global-weight-medium: 500;
 $global-weight-normal: 400;
 $global-width: 80rem;
 $global-font-size: 16px;
