--- a/src/stylesheets/global/_layouts.scss
+++ b/src/stylesheets/global/_layouts.scss
@@ -5,22 +5,38 @@
     padding: calc(4rem + 2.5vw) 1rem;
     margin: 0 auto;
     width: 100%;
+
     //max-width: $global-width;
 
-    @include breakpoint(phablet) {
-        padding-left: 7%;
-        padding-right: 7%;
+    @include breakpoint(tablet) {
+        padding-left: 6rem;
+        padding-right: 6rem;
     }
 
     @include breakpoint(desktop) {
+        padding-left: 10rem;
+        padding-right: 10rem;
+    }
+
+    @include breakpoint(largedesktop) {
         padding-left: calc(50vw - #{$global-width/2});
         padding-right: calc(50vw - #{$global-width/2});
     }
 
     &--full {
+        @include breakpoint(tablet) {
+            padding-left: 2rem;
+            padding-right: 2rem;
+        }
+
         @include breakpoint(desktop) {
-            padding-left: 3.333%;
-            padding-right: 3.333%;
+            padding-left: 2rem;
+            padding-right: 2rem;
+        }
+
+        @include breakpoint(largedesktop) {
+            padding-left: 5%;
+            padding-right: 5%;
         }
     }
 }
@@ -29,9 +45,14 @@
     padding-top: 1rem;
     padding-bottom: 1rem;
 
+    @include breakpoint(tablet) {
+        padding-top: 1.5rem;
+        padding-bottom: 1.5rem;
+    }
+
     @include breakpoint(desktop) {
-        padding-top: 1.25rem;
-        padding-bottom: 1.25rem;
+        padding-top: 1.75rem;
+        padding-bottom: 1.75rem;
     }
 }
 
@@ -39,28 +60,28 @@
     background-color: lighten($color: #000, $amount: 95%);
 }
 
+.swrap--rose {
+    background-color: $c-primary;
+    color: $white;
+}
+
 .swrap--dark {
     background-color: $c-secondary;
+    color: $white;
 }
 
-.servicelist {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
-    //grid-gap: 2rem;
-    margin-left: -3.333%;
-    margin-right: -3.333%;
-}
+.promoblock {
+    position: relative;
+    background-color: $c-primary;
 
-.service {
-    background-image: url(../images/white-marble.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    //text-align: center;
-
-    > * {
-        //margin-right: auto;
-        //margin-left: auto;
-        max-width: 46rem;
+    img {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        mix-blend-mode: multiply;
+        filter: grayscale(0.75);
     }
 }
