--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Fahkwang:400,400i,700|Raleway:400,400i,700");
+@import url("https://fonts.googleapis.com/css?family=Fahkwang:400,400i,700|Raleway:400,400i,500,500i,700");
 @import "~reset-css"; // Load CSS Reset from NPM
 @import "global/variables";
 @import "global/mixins";
@@ -9,8 +9,10 @@
 @import "components/sitefooter";
 @import "components/btn";
 @import "components/menu";
+@import "components/subnav";
 @import "components/hero";
 @import "components/servicecard";
 @import "components/nicetitle";
 @import "components/bio";
 @import "components/testicard";
+@import "components/callout";
