--- a/src/stylesheets/components/_hero.scss
+++ b/src/stylesheets/components/_hero.scss
@@ -3,10 +3,24 @@
     grid-template-columns: 1fr 50% 1fr;
     grid-template-rows: 1fr;
     align-items: center;
-    color: $white;
+    //background-color: hsl(0, 0, 16%);
+    padding-right: 0;
 
     @include breakpoint(phablet) {
         grid-template-columns: 1fr 33.333% 1fr;
+        padding-right: 1rem;
+    }
+
+    @include breakpoint(tablet) {
+        padding-right: 6rem;
+    }
+
+    @include breakpoint(desktop) {
+        padding-right: 10rem;
+    }
+
+    @include breakpoint(largedesktop) {
+        padding-right: calc(50vw - #{$global-width/2});
     }
 }
 
@@ -15,10 +29,10 @@
     grid-row: 1 / span 1;
     z-index: 1;
     padding: 3em 0;
-    font-size: calc(0.875rem + 0.25vw);
+    font-size: calc(1rem + 0.25vw);
 
     @include breakpoint(desktop) {
-        font-size: 1.25rem;
+        font-size: 1.5rem;
     }
 
     h1 {
@@ -31,7 +45,7 @@
     }
 
     p {
-        font-size: 1.333em;
+        font-size: 1.25em;
         line-height: 1.4;
         font-weight: $global-weight-bold;
         font-family: $header-font-family;
@@ -39,10 +53,11 @@
 
     .btn,
     .fauxbtn {
-        font-size: 1.125em;
+        font-size: 0.875em;
         line-height: 1.125;
         color: inherit;
         text-transform: uppercase;
+        font-weight: $global-weight-bold;
     }
 }
 
@@ -50,6 +65,9 @@
     grid-column: 2 / span 2;
     grid-row: 1 / span 1;
     align-self: stretch;
+    background-color: $c-primary;
+    position: relative;
+
     //position: relative;
 
     img {
@@ -57,5 +75,13 @@
         height: 100%;
         object-fit: cover;
         object-position: 20% 50%;
+        border: 0.5rem solid hsl(0, 0%, 75);
+        border-right-width: 0;
+        mix-blend-mode: multiply;
+        filter: grayscale(0.75);
+
+        @include breakpoint(phablet) {
+            border-right-width: 0.5rem;
+        }
     }
 }
