--- a/src/stylesheets/components/_menu.scss
+++ b/src/stylesheets/components/_menu.scss
@@ -1,6 +1,15 @@
 .menu--main {
     list-style: none;
     display: flex;
+    font-size: 0.75rem;
+
+    @include breakpoint(tablet) {
+        font-size: 0.875rem;
+    }
+
+    @include breakpoint(desktop) {
+        font-size: 1rem;
+    }
 
     > li {
         margin: 0 1rem;
@@ -8,40 +17,21 @@
         a {
             @extend .fauxbtn;
 
-            color: $white;
             font-weight: $global-weight-bold;
+            color: $white;
             text-transform: uppercase;
-
-            /* stylelint-disable */
-            background-image: linear-gradient(
-                360deg,
-                transparent 0,
-                transparent 100%
-            );
-            /* stylelint-enable */
+            background-image: linear-gradient(360deg, transparent 0, transparent 100%);
 
             &:hover,
             &:focus {
-                /* stylelint-disable */
-                background-image: linear-gradient(
-                    360deg,
-                    $c-primary 0,
-                    $c-primary 100%
-                );
-                /* stylelint-enable */
+                background-image: linear-gradient(360deg, $c-primary 0, $c-primary 100%);
             }
         }
     }
 
     > li.is-active {
         a {
-            /* stylelint-disable */
-            background-image: linear-gradient(
-                360deg,
-                $c-primary 0,
-                $c-primary 100%
-            );
-            /* stylelint-enable */
+            background-image: linear-gradient(360deg, $c-primary 0, $c-primary 100%);
         }
     }
 }
