--- a/src/stylesheets/components/_nicetitle.scss
+++ b/src/stylesheets/components/_nicetitle.scss
@@ -4,11 +4,14 @@
     line-height: 1.2;
     margin: 0 0 1em;
     transition: inherit;
+    font-size: calc(1.75rem + 0.5vw);
 
     em {
+        font-family: $body-font-family;
         font-weight: $global-weight-medium;
         text-transform: none;
         display: block;
         font-size: 0.75em;
+        //color: $c-primary;
     }
 }
