--- a/src/stylesheets/global/_layouts.scss
+++ b/src/stylesheets/global/_layouts.scss
@@ -73,6 +73,7 @@
 .promoblock {
     position: relative;
     background-color: $c-primary;
+    color: $white;
 
     img {
         position: absolute;
