--- a/src/stylesheets/components/_hero.scss
+++ b/src/stylesheets/components/_hero.scss
@@ -35,15 +35,6 @@
         font-size: 1.5rem;
     }
 
-    h1 {
-        font-size: 1.75em;
-        letter-spacing: 0.0875em;
-        text-transform: uppercase;
-        line-height: 1.25em;
-        margin: 0 0 1em;
-        //max-width: 15em;
-    }
-
     p {
         font-size: 1.25em;
         line-height: 1.4;
@@ -59,6 +50,15 @@
         text-transform: uppercase;
         font-weight: $global-weight-bold;
     }
+}
+
+.hero__title {
+    font-size: 1.75em;
+    letter-spacing: 0.0875em;
+    text-transform: uppercase;
+    line-height: 1.25em;
+    margin: 0 0 1em;
+    //max-width: 15em;
 }
 
 .hero__fig {
