--- a/src/stylesheets/components/_servicecard.scss
+++ b/src/stylesheets/components/_servicecard.scss
@@ -17,16 +17,16 @@
 }
 
 .service {
-    background-image: url(../images/white-marble.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    //text-align: center;
+    // //background-image: url(../images/white-marble.jpg);
+    // background-position: center;
+    // background-size: cover;
+    // background-repeat: no-repeat;
+    // //text-align: center;
 
     > * {
         //margin-right: auto;
         //margin-left: auto;
-        max-width: 46rem;
+        max-width: 50rem;
     }
 }
 
@@ -88,7 +88,7 @@
 .servicecard__title {
     text-transform: uppercase;
     color: $c-primary;
-    line-height: 1.2;
+    line-height: 1.25;
     margin: 0 0 1em;
     transition: inherit;
 
@@ -96,7 +96,7 @@
         font-weight: $global-weight-medium;
         text-transform: none;
         display: block;
-        font-size: 0.75em;
+        font-size: 0.875em;
         color: $white;
     }
 }
