--- a/src/stylesheets/global/_typography.scss
+++ b/src/stylesheets/global/_typography.scss
@@ -37,3 +37,13 @@ h4 {
 .text-center {
     text-align: center;
 }
+
+.lead,
+.lead > p {
+    font-size: 1.125rem;
+    font-weight: $global-weight-medium;
+
+    @include breakpoint(phablet) {
+        font-size: 1.25rem;
+    }
+}
