--- a/src/stylesheets/components/_hero.scss
+++ b/src/stylesheets/components/_hero.scss
@@ -1,39 +1,57 @@
 .hero {
     display: grid;
-    grid-template-columns: 1fr 50% 1fr;
+    grid-template-columns: 1fr 33.333% 1fr;
     grid-template-rows: 1fr;
     align-items: center;
+    margin: 0 auto;
+    width: 100%;
     //background-color: hsl(0, 0, 16%);
-    padding-right: 0;
+    padding: 0 0 calc(3rem + 2.5vw) 1rem;
+    background-color: $c-secondary;
+    // background-image: linear-gradient(135deg, $c-secondary 60%, lighten($c-secondary, 2%) 60%, lighten($c-secondary, 2%) 100%);
+    color: $white;
 
     @include breakpoint(phablet) {
-        grid-template-columns: 1fr 33.333% 1fr;
-        padding-right: 1rem;
+        //grid-template-columns: 1fr 33.333% 1fr;
+        //padding-right: 1rem;
     }
 
     @include breakpoint(tablet) {
-        padding-right: 6rem;
+        padding-left: 6rem;
+        padding-right: 2rem;
     }
 
     @include breakpoint(desktop) {
+        padding-left: 10rem;
         padding-right: 10rem;
     }
 
     @include breakpoint(largedesktop) {
+        padding-left: calc(50vw - #{$global-width/2});
         padding-right: calc(50vw - #{$global-width/2});
     }
 }
 
 .hero__content {
-    grid-column: 1 / span 2;
+    grid-column: 1 / span 3;
     grid-row: 1 / span 1;
     z-index: 1;
     padding: 3em 0;
     font-size: calc(1rem + 0.25vw);
+    padding-right: 15%;
+
+    @include breakpoint(phablet) {
+        grid-column: 1 / span 2;
+        padding-right: 10%;
+    }
 
     @include breakpoint(desktop) {
         font-size: 1.5rem;
     }
+
+    // @include breakpoint(largedesktop) {
+    //     font-size: 1.666rem;
+    // }
 
     p {
         font-size: 1.25em;
@@ -75,13 +93,13 @@
         height: 100%;
         object-fit: cover;
         object-position: 20% 50%;
-        border: 0.5rem solid hsl(0, 0%, 75);
+        border: 0.4333rem solid hsl(0, 0%, 75);
         border-right-width: 0;
         mix-blend-mode: multiply;
         filter: grayscale(0.75);
 
-        @include breakpoint(phablet) {
-            border-right-width: 0.5rem;
+        @include breakpoint(tablet) {
+            border-width: 0.5rem;
         }
     }
 }
