--- a/src/stylesheets/components/_menu.scss
+++ b/src/stylesheets/components/_menu.scss
@@ -14,11 +14,15 @@
     > li {
         margin: 0 1rem;
 
+        &:last-child {
+            margin-right: 0;
+        }
+
         a {
             @extend .fauxbtn;
 
             font-weight: $global-weight-bold;
-            color: $white;
+            color: inherit;
             text-transform: uppercase;
             background-image: linear-gradient(360deg, transparent 0, transparent 100%);
 
