--- a/src/stylesheets/components/_btn.scss
+++ b/src/stylesheets/components/_btn.scss
@@ -24,7 +24,7 @@
     padding: 1.125em 1.25em;
     min-width: 18em;
     border: 0.125em solid darken($c-primary, 5%);
-    color: inherit;
+    color: $white;
     background-color: $c-primary;
     //color: #fff;
     text-decoration: none;
