--- a/src/stylesheets/global/_variables.scss
+++ b/src/stylesheets/global/_variables.scss
@@ -1,5 +1,5 @@
-$c-primary: #ff69b4;
-$c-secondary: #0e2241;
+$c-primary: #f86491; //#ff69b4;
+$c-secondary: #172335; //#0e2241;
 $c-ametist: #675682;
 $white: #ededed;
 $body-font-family: "Raleway", sans-serif;
