--- a/src/stylesheets/components/_callout.scss
+++ b/src/stylesheets/components/_callout.scss
@@ -1,11 +1,17 @@
 .callout {
     position: relative;
-    padding: 5% 7%;
+    padding: 2rem 1rem;
     text-align: center;
     font-size: calc(1rem + 0.25vw);
+    background-color: rgba($body-background, 0.925);
+    color: $body-font-color;
+    max-width: $global-width * 0.666;
+    margin: 0 auto;
+    box-shadow: 0 0 2rem 0 rgba(#000, 0.75);
 
     @include breakpoint(desktop) {
-        font-size: 1.666rem;
+        font-size: 1.333rem;
+        padding: 4% 7% 3%;
     }
 
     // border: 3px solid $c-primary;
@@ -16,15 +22,17 @@
     h2 {
         font-size: 1.875em;
         line-height: 1.2;
-        margin: 0 0 0.25em;
+        margin: 0 0 0.125em;
     }
 
     p {
         font-weight: $global-weight-bold;
         font-size: 1.125em;
+        margin-bottom: 1em;
     }
 
     .btn {
         font-size: 0.666em;
+        margin: 0;
     }
 }
