--- a/src/stylesheets/components/_sitefooter.scss
+++ b/src/stylesheets/components/_sitefooter.scss
@@ -2,6 +2,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    font-size: 0.875rem;
+
+    a {
+        color: $c-primary;
+        text-decoration: none;
+    }
 }
 
 .sitefooter__section {
