--- a/src/stylesheets/components/_testicard.scss
+++ b/src/stylesheets/components/_testicard.scss
@@ -26,8 +26,8 @@
     padding: calc(1.25rem + 1.5%) calc(1rem + 1.5%);
     border-radius: 0.25rem;
     height: 100%;
-    color: $white;
-    background-color: rgba(#fff, 0.05);
+    //color: $white;
+    background-color: rgba(#fff, 0.025);
     //background-color: $c-secondary;
     //border: 0.5rem solid $c-primary;
 }
