--- a/src/stylesheets/global/_mixins.scss
+++ b/src/stylesheets/global/_mixins.scss
@@ -37,3 +37,11 @@
     }
 }
 /* stylelint-enable */
+
+@mixin clearfix {
+    &::after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+}
