--- a/src/stylesheets/components/_nicetitle.scss
+++ b/src/stylesheets/components/_nicetitle.scss
@@ -15,3 +15,11 @@
         //color: $c-primary;
     }
 }
+
+.nicetitle--accent {
+    color: $c-primary;
+
+    em {
+        color: $c-lightrose;
+    }
+}
