--- a/src/stylesheets/components/_siteheader.scss
+++ b/src/stylesheets/components/_siteheader.scss
@@ -1,9 +1,9 @@
 .siteheader {
     display: flex;
     align-items: center;
-    background-color: $c-secondary;
+    background-color: $c-lightrose;
     //position: absolute;
-    color: $white;
+    //color: $white;
     //background-color: hsl(0, 0, 16%);
 
     // @include breakpoint(desktop) {
