--- a/src/stylesheets/components/_testicard.scss
+++ b/src/stylesheets/components/_testicard.scss
@@ -1,9 +1,15 @@
+.glide {
+    max-width: $global-width;
+    width: 100%;
+    margin: 0 auto;
+}
+
 .testilist {
     margin: 0;
     padding: 0;
     list-style: none;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
     grid-column-gap: 2.5%;
     grid-row-gap: 1.666rem;
 }
@@ -20,34 +26,33 @@
 }
 
 .testicard {
-    font-size: 0.9375rem;
+    font-size: 1.25rem;
     position: relative;
     margin: 0 auto;
-    padding: calc(1.25rem + 1.5%) calc(1rem + 1.5%);
+    max-width: 40em;
+    padding: calc(1.25rem + 1.5%) 0;
     border-radius: 0.25rem;
     height: 100%;
+    //width: 100%;
     //color: $white;
     background-color: rgba(#fff, 0.025);
     //background-color: $c-secondary;
     //border: 0.5rem solid $c-primary;
+    @include breakpoint(tablet) {
+        font-size: 1.5rem;
+    }
 }
 
 .testicard p {
-    margin-bottom: 6rem;
+    margin-bottom: 4rem;
     font-weight: $global-weight-medium;
     font-style: italic;
 }
 
 .testicard cite {
     font-family: $header-font-family;
-    overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    padding: calc(1.25rem + 1.5%) calc(1rem + 1.5%) calc(1.25rem + 1.5%);
     display: block;
     font-weight: $global-weight-bold;
     font-style: normal;
@@ -62,7 +67,7 @@
     border-radius: 50%;
     float: left;
     margin: -0.5em 0.875em 0 0;
-    border: 3px solid $c-secondary;
+    border: 3px solid $c-primary;
 }
 
 .testicard cite span {
