--- a/src/stylesheets/global/_variables.scss
+++ b/src/stylesheets/global/_variables.scss
@@ -6,7 +6,7 @@ $c-darkgray: #2e2e2e;
 $white: #ededed;
 $body-font-family: "Raleway", sans-serif;
 $header-font-family: "Fahkwang", sans-serif;
-$body-font-color: $c-secondary;
+$body-font-color: $c-darkgray;
 $body-background: $white;
 $global-weight-bold: 700;
 $global-weight-medium: 500;
