--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -17,3 +17,9 @@
 @import "components/testicard";
 @import "components/callout";
 @import "components/pricetable";
+
+// Required Core Stylesheet
+@import "node_modules/@glidejs/glide/src/assets/sass/glide.core";
+
+// Optional Theme Stylesheet
+@import "node_modules/@glidejs/glide/src/assets/sass/glide.theme";
