--- a/src/stylesheets/components/_hero.scss
+++ b/src/stylesheets/components/_hero.scss
@@ -6,7 +6,7 @@
     margin: 0 auto;
     width: 100%;
     background-color: $c-lightrose;
-    padding: 0 0 calc(3rem + 2.5vw) 1rem;
+    padding: calc(3rem + 2.5vw) 0 calc(3rem + 2.5vw) 1rem;
     // background-color: $c-secondary;
     // background-image: linear-gradient(
     //     135deg,
@@ -37,6 +37,15 @@
     }
 }
 
+.hero--dark {
+    background-color: $c-darkgray;
+    color: $c-lightrose;
+}
+
+.hero--notop {
+    padding-top: 0;
+}
+
 .hero--light {
     background-color: $c-lightrose;
     color: $body-font-color;
@@ -47,7 +56,7 @@
     grid-column: 1 / span 3;
     grid-row: 1 / span 1;
     z-index: 1;
-    padding: 3em 0;
+    padding: calc(2rem + 10%) 0;
     font-size: calc(1rem + 0.25vw);
     padding-right: 15%;
 
@@ -60,22 +69,16 @@
         font-size: 1.5rem;
     }
 
-    // @include breakpoint(largedesktop) {
-    //     font-size: 1.666rem;
-    // }
-
     p {
-        font-size: 1.25em;
-        line-height: 1.4;
-        font-weight: $global-weight-bold;
-        font-family: $header-font-family;
+        font-size: 0.875em;
+        //line-height: 1.4;
+        //font-weight: $global-weight-bold;
+        // font-family: $header-font-family;
 
         a {
             @extend .fauxbtn;
 
             text-transform: none !important;
-            // color: $c-primary;
-            // color: inherit;
         }
     }
 
@@ -89,6 +92,21 @@
     }
 }
 
+p.hero__lead {
+    font-size: 1.25em;
+    line-height: 1.4;
+    font-weight: $global-weight-bold;
+    font-family: $header-font-family;
+
+    a {
+        @extend .fauxbtn;
+
+        text-transform: none !important;
+        // color: $c-primary;
+        // color: inherit;
+    }
+}
+
 .hero__title {
     font-size: 1.75em;
     letter-spacing: 0.0875em;
@@ -96,6 +114,14 @@
     line-height: 1.25em;
     margin: 0 0 1em;
     //max-width: 15em;
+    em {
+        display: block;
+        font-size: 0.666em;
+        // font-family: $body-font-family;
+        // font-weight: $global-weight-bold;
+        text-transform: none;
+        letter-spacing: 0;
+    }
 }
 
 .hero__fig {
@@ -104,21 +130,64 @@
     align-self: stretch;
     background-color: $c-primary;
     position: relative;
-
-    //position: relative;
+    //opacity: 0.25;
 
     img {
         width: 100%;
         height: 100%;
         object-fit: cover;
         object-position: 20% 50%;
-        border: 0.4333rem solid $c-primary;
-        border-right-width: 0;
-        mix-blend-mode: multiply;
-        filter: grayscale(0.75);
+        //border: 0.4333rem solid $c-primary;
+        //border-right-width: 0;
+        //mix-blend-mode: multiply;
+        //filter: grayscale(0.75) brightness(200%);
 
         @include breakpoint(tablet) {
-            border-width: 0.5rem;
+            //border-width: 0.5rem;
+        }
+    }
+}
+
+.hero--swap {
+    padding: calc(3rem + 2.5vw) 1rem calc(3rem + 2.5vw) 0;
+
+    @include breakpoint(tablet) {
+        padding-left: 6rem;
+        padding-right: 2rem;
+    }
+
+    @include breakpoint(desktop) {
+        padding-left: 10rem;
+        padding-right: 10rem;
+    }
+
+    @include breakpoint(largedesktop) {
+        padding-left: calc(50vw - #{$global-width/2});
+        padding-right: calc(50vw - #{$global-width/2});
+    }
+
+    .hero__content {
+        grid-column: 1 / span 3;
+        padding-right: 0;
+        padding-left: 15%;
+
+        @include breakpoint(phablet) {
+            grid-column: 2 / span 2;
+            padding-left: 10%;
+        }
+    }
+
+    .hero__fig {
+        grid-column: 1 / span 2;
+
+        img {
+            //border-right-width: 0.4333rem;
+            //border-left-width: 0;
+            object-position: 80% 50%;
+
+            @include breakpoint(tablet) {
+                //border-width: 0.5rem;
+            }
         }
     }
 }
