--- a/src/stylesheets/global/_variables.scss
+++ b/src/stylesheets/global/_variables.scss
@@ -1,9 +1,9 @@
 $c-primary: #f86491; //#ff69b4;
 $c-secondary: #172335; //#0e2241;
 $c-ametist: #675682;
-$c-lightrose: lighten($c-primary, 30%);
+$c-lightrose: lighten($c-primary, 31%);
 $c-darkgray: #2e2e2e;
-$white: #ededed;
+$white: #fefefe;
 $body-font-family: "Raleway", sans-serif;
 $header-font-family: "Fahkwang", sans-serif;
 $body-font-color: $c-darkgray;
