--- a/src/stylesheets/components/_siteheader.scss
+++ b/src/stylesheets/components/_siteheader.scss
@@ -15,6 +15,10 @@
     color: $c-lightrose;
 }
 
+.siteheader--transp {
+    background-color: transparent;
+}
+
 .siteheader__logo {
     //display: flex;
     align-items: center;
